fixing landscape view on mobile

--- a/src/styles/responsive/_tablet.scss
+++ b/src/styles/responsive/_tablet.scss
@@ -1,7 +1,7 @@
 @media only screen 
 and (min-device-width : 601px) 
 and (max-device-width : 1090px), 
-only screen and (min-device-width : 501px) and (max-device-width : 1090px) and (orientation: landscape)
+only screen and (max-device-width : 935px) and (orientation: landscape)
  {
   .nav-mobile {
     display: none;
@@ -131,6 +131,8 @@ only screen and (min-device-width : 501px) and (max-device-width : 1090px) and (
   }
 
   .section-markets {
+    margin-top: 10rem;
+
     .markets-totals {
       flex-direction: row;
       margin-top: 1rem;
@@ -163,14 +165,13 @@ only screen and (min-device-width : 501px) and (max-device-width : 1090px) and (
 
   }
 
-
   .section-governance {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: auto;
-    margin-top: 10rem;
-    padding-top: 25rem;
+    margin-top: 7.5rem;
+    padding-top: 15rem;
     .box {
       padding: 5rem 3rem 2rem 3rem;
     }
@@ -291,10 +292,9 @@ only screen and (min-device-width : 501px) and (max-device-width : 1090px) and (
 }
 
 
-@media only screen 
-  and (min-device-width : 501px) 
-  and (max-device-width : 1090px)
-  and  (orientation: landscape) 
+@media only screen
+  and (max-device-width : 935px)
+  and (orientation: landscape) 
 {
 
   .video {
@@ -302,10 +302,21 @@ only screen and (min-device-width : 501px) and (max-device-width : 1090px) and (
   }
 
   .section-main {
+    .cryptex-logo {
+      width: 280px;
+    }
+    .main-button {
+      height: 5.5rem;
+    }
     .main-info {
-      padding-top: 7rem;
+      padding-top: 7.2rem;
       padding-bottom: 2rem;
     }
+  }
+
+  .section-markets {
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
   }
 
   .home-subheader {
